# dev-setup-cli

./: .devsetup.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
devsetup/: cli.py  doctor.py
devsetup/config/: loader.py  requirements.py  validator.py
devsetup/core/: checks.py  prompt.py  shell.py  version.py
devsetup/installers/: git.py  java.py  mysql.py  node.py  postgres.py  python.py  system.py  venv.py
devsetup/profiles/: profiles.py
devsetup/project/: python_project.py
examples/: backend.toml  frontend.toml  fullstack.toml  teaching.toml
tests/: test_cli.py  test_doctor.py
tests/config/: test_validator.py
tests/core/: test_checks.py  test_prompt.py  test_shell.py  test_version.py
tests/project/: test_python_project.py
