[project]
name = "dev-setup-cli"
version = "0.1.0"
description = "CLI para setup de ambiente de desenvolvimento no WSL/Linux"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = [
  "devsetup/core",
  "devsetup/doctor.py",
  "devsetup/config"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[project.scripts]
devsetup = "devsetup.cli:app"