[project]
name = "dev-setup-cli-jhonata"
version = "0.1.0"
description = "CLI para setup automatizado de ambiente de desenvolvimento no WSL/Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jhonata Sobral" }
]
keywords = ["cli", "wsl", "linux", "developer-tools", "setup"]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "tomli>=2.0.0; python_version < '3.11'"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.0.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/sobraljhonata/dev-setup-cli"
Repository = "https://github.com/sobraljhonata/dev-setup-cli"
Issues = "https://github.com/sobraljhonata/dev-setup-cli/issues"

[project.scripts]
devsetup = "devsetup.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = [
  "devsetup/core",
  "devsetup/doctor.py",
  "devsetup/config"
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]